maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: not found: value heigth
    for(j <- 0 to heigth-1) {
                  ^